# warming-no-rs

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
backend/: pyproject.toml
backend/core/: rpc.py
backend/core/adapters/: langgraph_fingering_agent.py  local_midi.py  openai_compatible_llm.py  openai_stage_analyzer.py
backend/core/adapters/persistence/: json_music_repository.py  sqlite_encrypted_llm_secret_repository.py  sqlite_fingering_repository.py  sqlite_llm_settings_repository.py  sqlite_music_repository.py  sqlite_piece_stage_repository.py
backend/core/app/: app_error.py  fingering.py  llm_settings.py  piece_stages.py
backend/core/app/fingering/: __init__.py  command.py  policy.py  port.py  query.py
backend/core/app/llm_settings/: __init__.py  command.py  port.py  query.py
backend/core/app/music/: __init__.py  command.py  local_library.py  local_library_model.py  policy.py  port.py  query.py
backend/core/app/piece_stages/: __init__.py  command.py  port.py  query.py
backend/core/domain/: fingering.py  llm_settings.py  piece_stages.py
backend/core/domain/fingering/: __init__.py  entity.py  value_object.py
backend/core/domain/llm_settings/: __init__.py
backend/core/domain/music/: __init__.py  entity.py  hand_assignment.py  value_object.py
backend/core/domain/piece_stages/: __init__.py  entity.py
backend/core/infra/: setup.py
backend/tests/: test_encrypted_llm_secret_repository.py  test_fingering_agent.py  test_hand_assignment.py  test_llm_settings.py  test_local_midi_library.py  test_piece_stages.py  test_state_path.py
frontend/: DESIGN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/scripts/: build-python-sidecar.mjs
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: audio_output.rs  lib.rs  llm_settings.rs  macos_window.rs  main.rs  midi_input.rs  python_sidecar.rs  transcription.rs
frontend/src/api/: agent.ts  client.ts  fingering.ts  instrument.ts  knowledge.ts  llmSettings.ts  pieceStages.ts  practice.ts  runtime.ts  score.ts  transcription.ts
frontend/src/app/: providers.tsx  router.tsx
frontend/src/app/layout/: AppShell.tsx  ContentDragHandle.tsx  WindowChromeSync.tsx  WindowControls.tsx
frontend/src/components/media/: AsciiMediaBackground.tsx  asciiMediaRenderer.ts
frontend/src/desktop/: DesktopContextMenu.tsx  commands.ts  fs.ts  tauri.ts  window.ts
frontend/src/pages/: LibraryPage.tsx  PieceDetailPage.tsx  PracticePage.tsx  ProcessingPage.tsx  ReportsPage.tsx  SettingsPage.tsx
(+31 files in other folders)
