[project]
name = "warming-backend"
version = "0.1.0"
description = "Local-first backend for Warming"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45.0.0,<47.0.0",
  "langchain-core>=1.0.0,<2.0.0",
  "langchain-openai>=1.0.0,<2.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "langmem>=0.0.30,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0.0,<7.0.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
