[package]
name = "warming"
version = "0.1.0"
description = "Local-first piano practice desktop app"
authors = ["zhiyanzhaijie"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "warming"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
rfd = "0.15"
cpal = "0.17.3"
oxisynth = "0.1.0"
midir = "0.11"
tauri-plugin-opener = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
  "NSButton",
  "NSView",
  "NSWindow",
] }
